--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
     <header>
+        <a href="#">Perguntas frequentes</a>
     <h1>
-    Top equipamentos de jaridnagem para 2024
+    Top equipamentos de jardinagem para 2024
     </h1>
+    <h6>
+        Descubra equipamentos de jardinagem que apoiarão suas atividades de jardinagem e quaisquer sementes ou fertilizantes de alta qualidade.
+    </h6>
+    <a href="#">Sobre nós</a>
     </header>
 </body>
 </html>
