--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
     </h3>
     <a href="#">Sobre nós</a>
     </header>
+    <section>
+        <div>
+<img src="" alt="">
+        </div>
+        <div>
+
+        </div>
+    </section>
 </body>
 </html>
